--- a/index.css
+++ b/index.css
@@ -32,8 +32,8 @@ letter-spacing: 5px;
 }
 #userNameDiv{
    background-color: aqua;
-   width: 100vw;
-   height: 100vh;
+   width: 100%;
+   height: 100%;
    position: absolute;
    left: 0;
    top: 0;
@@ -190,6 +190,9 @@ footer>p{
     footer>p{
         font-size: 0.8rem;
     }
+    #userName{
+        font-size: 1.2rem;
+    }
 }
 @media(max-width:688px){
     #addTask{
@@ -222,10 +225,15 @@ footer>p{
       align-items: center;
       justify-content: center;
   }
+  #userName{
+      font-size: 1rem;
+  }
 }
 @media (max-width:410px){
     #calendar{
         display: none;
     }
-   
+    #userName{
+        font-size: 0.8rem;
+    }
 }
